sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: not found: type Bool
    var cond: Bool=false
              ^AlgGnomeSort:14: error: not found: value cond
  }while (cond)
          ^